--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
+  "homepage": "https://sergiotomey.github.io/LaHorquetaBeautySite",
   "name": "lhb",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://sergiotomey.github.io/LaHorquetaBeautySite",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
